@@ -1,3 +1,11 @@
+2006-07-12 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j83-UNSTABLE
+
+ * Send_email to new users now default unchecked.
+
+ * Fix: popups/create_user.php were not reloaed correct on Submit
+
+ * Fix: Little warning in setup/init.php
+
 2006-07-11 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j82-UNSTABLE
 
  * Layout changes. Mostly to make Gallery look better when embedded :)
